welcome.lessons.welcome.array.maxvalue.MaxValue.scala.error
maxValue:12: error: Unmatched closing brace '}' ignored here
 }
 ^